lien form avec coach

--- a/activities2.html
+++ b/activities2.html
@@ -28,7 +28,7 @@
                 <span></span>
             </span>
         </a>
-        
+
         <div>
             <a href="homePage.html">
                 <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logo GymStudio">
@@ -46,7 +46,7 @@
                 </a>
             </div>
             <div class="txt_buttons" id="sports_boxe" class="choiceSport">
-                <a href="#"  class="choiceSport">Boxe</a>
+                <a href="#" class="choiceSport">Boxe</a>
             </div>
         </div>
 
@@ -109,18 +109,12 @@
 
     </section>
     <section class="sports_text">
-        <div class="cardActivityContainer" id="global" data-active="box" >
+        <div class="cardActivityContainer" id="global" data-active="box">
 
         </div>
     </section>
 
-    <div class="footercapsule" style="color:azure"></div>
-    <footer>
-
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logogymstudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logoX"> <img class="logoInsta"
-                src="images/logoInsta.png" alt="logoinsta"></p>
-    </footer> -->
+    <div class="footercapsule"></div>
     <footer>
         <div id="footerLeft">
             <p>&copy;</p>
@@ -128,10 +122,10 @@
         </div>
         <div id="footerRight">
             <p>Retrouvez-nous sur les réseaux sociaux : </p>
-            <img class="logoX" src="images/logoX.png" alt="logoX"> 
+            <img class="logoX" src="images/logoX.png" alt="logoX">
             <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
         </div>
-    </footer> 
+    </footer>
 
 
 
