--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
     <title>Form GymStudio</title>
 </head>
 
-<body onload="init2()">
+<body>
     <header>
         <div id="mySidenav" class="sidenav">
             <a id="closeBtn" href="#" class="close">×</a>
@@ -24,6 +24,7 @@
                 <li><a href="activities2.html">Nos sports</a></li>
                 <li><a href="coach.html">Nos coach</a></li>
                 <li><a href="form.html">Réserver</a></li>
+                <script src="lienCoachForm.js"></script>
             </ul>
         </div>
 
@@ -147,12 +148,7 @@
         </div>
     </section>
 
-    <!-- <footer>
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logo GymStudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logo X"> <img
-                class="logoInsta" src="images/logoInsta.png" alt="logo Instagram"></p>
-    </footer> -->
-
+    <div class="footercapsule"></div>
     <footer>
         <div id="footerLeft">
             <p>&copy;</p>
@@ -160,10 +156,10 @@
         </div>
         <div id="footerRight">
             <p>Retrouvez-nous sur les réseaux sociaux : </p>
-            <img class="logoX" src="images/logoX.png" alt="logoX"> 
+            <img class="logoX" src="images/logoX.png" alt="logoX">
             <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
         </div>
-    </footer> 
+    </footer>
 
     <script src="form.js"></script>
     <script src="menuBurger.js" defer> </script>
