--- a/form.html
+++ b/form.html
@@ -147,23 +147,18 @@
         </div>
     </section>
 
-    <!-- <footer>
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logo GymStudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logo X"> <img
-                class="logoInsta" src="images/logoInsta.png" alt="logo Instagram"></p>
-    </footer> -->
-
+    <div class="footercapsule"></div>
     <footer>
-        <div id="footerLeft">
-            <p>&copy;</p>
-            <img class="logoGymStudioFooter" src="images/logoGymStudio.png" alt="logoGymStudio">
-        </div>
-        <div id="footerRight">
-            <p>Retrouvez-nous sur les réseaux sociaux : </p>
-            <img class="logoX" src="images/logoX.png" alt="logoX"> 
-            <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
-        </div>
-    </footer> 
+      <div id="footerLeft">
+          <p>&copy;</p>
+          <img class="logoGymStudioFooter" src="images/logoGymStudio.png" alt="logoGymStudio">
+      </div>
+      <div id="footerRight">
+          <p>Retrouvez-nous sur les réseaux sociaux : </p>
+          <img class="logoX" src="images/logoX.png" alt="logoX"> 
+          <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
+      </div>
+  </footer>  
 
     <script src="form.js"></script>
     <script src="menuBurger.js" defer> </script>
