lien coach form

--- a/coach.html
+++ b/coach.html
@@ -77,7 +77,7 @@
 
                 </div>
                 <div id="button_aquagym">
-                    <a href="form.html" class="buttonCoach2" data-button="ines">Réserver avec Inès</a>
+                    <a href="form.html" class="buttonCoach2" data-button="coachAquaGym">Réserver avec Inès</a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,8 @@
                         Profiter des bienfaits des sports d'eau.
                     </p>
                 </div>
-                <div id="button_aquabike"><a href="form.html" class="buttonCoach2" data-button="lea">Réserver avec
+                <div id="button_aquabike"><a href="form.html" class="buttonCoach2" data-button="coachAquaBike">Réserver
+                        avec
                         Léa</a></div>
             </div>
 
@@ -117,7 +118,7 @@
                         Venez allier force et souplesse avec Clémence pour vous reconnecter à vous même.
                     </p>
                 </div>
-                <div id="button_yoga"><a href="form.html" class="buttonCoach2" data-button="clemence">Réserver avec
+                <div id="button_yoga"><a href="form.html" class="buttonCoach2" data-button="coachYoga">Réserver avec
                         Clémence</a></div>
             </div>
         </div>
@@ -137,7 +138,8 @@
                             Un coach musclé lors d'une séance pour se dépasser.
                         </p>
                     </div>
-                    <div id="button1_boxe"><a href="form.html" class="buttonCoach2" data-button="bob">Réserver avec
+                    <div id="button1_boxe"><a href="form.html" class="buttonCoach2" data-button="coachBoxe1">Réserver
+                            avec
                             Bob</a></div>
                 </div>
 
@@ -153,7 +155,8 @@
                             Nouvelle coach qui a rejoint nos équipes en début d'année, elle vous fera transpirer.
                         </p>
                     </div>
-                    <div id="button2_boxe"><a href="form.html" class="buttonCoach2" data-button="laura">Réserver avec
+                    <div id="button2_boxe"><a href="form.html" class="buttonCoach2" data-button="coachBoxe2">Réserver
+                            avec
                             Laura</a></div>
                 </div>
             </div>
@@ -173,7 +176,8 @@
                             Anais vous accompagne dans ses séances bien musclées.
                         </p>
                     </div>
-                    <div id="button1_muscu"><a href="form.html" class="buttonCoach2" data-button="anais">Réserver avec
+                    <div id="button1_muscu"><a href="form.html" class="buttonCoach2" data-button="coachMuscu1">Réserver
+                            avec
                             Anais</a></div>
                 </div>
 
@@ -188,7 +192,8 @@
                             Venez tonifier et sculpter votre corps avec Thomas.
                         </p>
                     </div>
-                    <div id="button2_muscu"><a href="form.html" class="buttonCoach2" data-button="thomas">Réserver avec
+                    <div id="button2_muscu"><a href="form.html" class="buttonCoach2" data-button="coachMuscu2">Réserver
+                            avec
                             Thomas</a></div>
                 </div>
             </div>
@@ -210,7 +215,8 @@
                             Vener vous dépenser avec notre dynamique Arthur.
                         </p>
                     </div>
-                    <div id="button1_cardio"><a href="form.html" class="buttonCoach2" data-button="arthur">Réserver
+                    <div id="button1_cardio"><a href="form.html" class="buttonCoach2"
+                            data-button="coachCardio1">Réserver
                             avec Arthur</a></div>
                 </div>
 
@@ -225,7 +231,8 @@
                             Brûler vos calories au rythme de Luc et de son sifflet.
                         </p>
                     </div>
-                    <div id="button2_cardio"><a href="form.html" class="buttonCoach2" data-button="luc">Réserver
+                    <div id="button2_cardio"><a href="form.html" class="buttonCoach2"
+                            data-button="coachCardio2">Réserver
                             avec Luc</a></div>
                 </div>
             </div>
