--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
     <title>Form GymStudio</title>
 </head>
 
-<body>
+<body onload="init2()">
     <header>
         <div id="mySidenav" class="sidenav">
             <a id="closeBtn" href="#" class="close">×</a>
@@ -65,19 +65,19 @@
                         <label for="coachName">Le Coach</label>
                         <select name="selectCoachName" id="selectCoachName">
                             <option value="noCoachSelected" class="maskCoach"></option>
-                            <option value="coachBoxe1" class="maskCoach" data-select="bob">Bob - Boxe</option>
-                            <option value="coachBoxe2" class="maskCoach" data-select="laura">Laura - Boxe</option>
-                            <option value="coachMuscu1" class="maskCoach" data-select="anais">Anaïs - Musculation
+                            <option value="coachBoxe1" class="maskCoach">Bob - Boxe</option>
+                            <option value="coachBoxe2" class="maskCoach">Laura - Boxe</option>
+                            <option value="coachMuscu1" class="maskCoach">Anaïs - Musculation
                             </option>
-                            <option value="coachMuscu2" class="maskCoach" data-select="thomas">Thomas - Musculation
+                            <option value="coachMuscu2" class="maskCoach">Thomas - Musculation
                             </option>
-                            <option value="coachAquaBike" class="maskCoach" data-select="lea">Léa - AquaBike
+                            <option value="coachAquaBike" class="maskCoach">Léa - AquaBike
                             </option>
-                            <option value="coachCardio1" class="maskCoach" data-select="arthur">Arthur - Cardio
+                            <option value="coachCardio1" class="maskCoach">Arthur - Cardio
                             </option>
-                            <option value="coachCardio2" class="maskCoach" data-select="luc">Luc - Cardio</option>
-                            <option value="coachAquaGym" class="maskCoach" data-select="ines">Inès - AquaGym</option>
-                            <option value="coachYoga" class="maskCoach" data-select="clemence">Clémence - Yoga</option>
+                            <option value="coachCardio2" class="maskCoach">Luc - Cardio</option>
+                            <option value="coachAquaGym" class="maskCoach">Inès - AquaGym</option>
+                            <option value="coachYoga" class="maskCoach">Clémence - Yoga</option>
                         </select>
                     </div>
                     <div id="nameClient">
