pull avant push, modif size photos

--- a/coach.html
+++ b/coach.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Nunito+Sans:opsz,wght@6..12,300&display=swap"
         rel="stylesheet">
-    <script src="activitiesCardGeneration.js"></script>
+    <!-- <script src="activitiesCardGeneration.js"></script> -->
     <script src="onecoach.js"></script>
     <script src="form.js"></script>
     <script src="menuBurger.js" defer> </script>
@@ -236,11 +236,17 @@
         </div>
     </section>
 
-    <div class="footercapsule" style="color:azure"></div>
-    <footer id="footerCoachPage">
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logoGymStudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logoX"> <img class="logoInsta"
-                src="images/logoInsta.png" alt="logoInsta"></p>
+    <div class="footercapsule"></div>
+    <footer>
+        <div id="footerLeft">
+            <p>&copy;</p>
+            <img class="logoGymStudioFooter" src="images/logoGymStudio.png" alt="logoGymStudio">
+        </div>
+        <div id="footerRight">
+            <p>Retrouvez-nous sur les réseaux sociaux : </p>
+            <img class="logoX" src="images/logoX.png" alt="logoX"> 
+            <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
+        </div>
     </footer> 
 
 </body>
