--- a/form.html
+++ b/form.html
@@ -147,12 +147,7 @@
         </div>
     </section>
 
-    <!-- <footer>
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logo GymStudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logo X"> <img
-                class="logoInsta" src="images/logoInsta.png" alt="logo Instagram"></p>
-    </footer> -->
-
+    <div class="footercapsule"></div>
     <footer>
         <div id="footerLeft">
             <p>&copy;</p>
