--- a/homePage.html
+++ b/homePage.html
@@ -101,26 +101,18 @@
       <button onclick>Voir nos sports</button>
     </a>
   </div>
+  <div class="footercapsule"></div>
   <footer>
-    <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png"> </p>
-    <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png"> <img class="logoInsta"
-        src="images/logoInsta.png"></p>
-  </footer>
-<!-- 
-  <div class="footercapsule" style="color:azure"></div>
-  <footer>
-    <div id="footerLeft">
-        <p>&copy;</p>
-        <img class="logoGymStudioFooter" src="images/logoGymStudio.png" alt="logoGymStudio">
-    </div>
-    <div id="footerRight">
-        <p>Retrouvez-nous sur les réseaux sociaux : </p>
-        <img class="logoX" src="images/logoX.png" alt="logoX"> 
-        <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
-    </div>
-</footer>  -->
-
-
+      <div id="footerLeft">
+          <p>&copy;</p>
+          <img class="logoGymStudioFooter" src="images/logoGymStudio.png" alt="logoGymStudio">
+      </div>
+      <div id="footerRight">
+          <p>Retrouvez-nous sur les réseaux sociaux : </p>
+          <img class="logoX" src="images/logoX.png" alt="logoX"> 
+          <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
+      </div>
+  </footer> 
 </body>
 
 </html>
