--- a/coach.html
+++ b/coach.html
@@ -236,12 +236,18 @@
         </div>
     </section>
 
-    <div class="footercapsule" style="color:azure"></div>
-    <footer id="footerCoachPage">
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logoGymStudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logoX"> <img class="logoInsta"
-                src="images/logoInsta.png" alt="logoInsta"></p>
-    </footer> 
+    <div class="footercapsule"></div>
+    <footer>
+        <div id="footerLeft">
+            <p>&copy;</p>
+            <img class="logoGymStudioFooter" src="images/logoGymStudio.png" alt="logoGymStudio">
+        </div>
+        <div id="footerRight">
+            <p>Retrouvez-nous sur les réseaux sociaux : </p>
+            <img class="logoX" src="images/logoX.png" alt="logoX"> 
+            <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
+        </div>
+    </footer>
 
 </body>
 
