--- a/homePage.html
+++ b/homePage.html
@@ -101,13 +101,8 @@
       <button onclick>Voir nos sports</button>
     </a>
   </div>
-  <footer>
-    <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png"> </p>
-    <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png"> <img class="logoInsta"
-        src="images/logoInsta.png"></p>
-  </footer>
-<!-- 
-  <div class="footercapsule" style="color:azure"></div>
+  
+  <div class="footercapsule"></div>
   <footer>
     <div id="footerLeft">
         <p>&copy;</p>
@@ -118,7 +113,7 @@
         <img class="logoX" src="images/logoX.png" alt="logoX"> 
         <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
     </div>
-</footer>  -->
+</footer> 
 
 
 </body>
