--- a/activities2.html
+++ b/activities2.html
@@ -114,13 +114,7 @@
         </div>
     </section>
 
-    <div class="footercapsule" style="color:azure"></div>
-    <footer>
-
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logogymstudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logoX"> <img class="logoInsta"
-                src="images/logoInsta.png" alt="logoinsta"></p>
-    </footer> -->
+    <div class="footercapsule"></div>
     <footer>
         <div id="footerLeft">
             <p>&copy;</p>
@@ -132,10 +126,6 @@
             <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
         </div>
     </footer> 
-
-
-
-
     <script src="menuBurger.js" defer> </script>
     <script type="module" src="activitiesCardGeneration.js"></script>
     <script src=onecoach.js></script>
