travail sur les boutons

--- a/activities2.html
+++ b/activities2.html
@@ -114,8 +114,8 @@
         </div>
     </section>
 
-    <div class="footercapsule" style="color:azure"></div>
-    <footer>
+    <div class="footercapsule"></div>
+    <!-- <footer>
 
         <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logogymstudio"> </p>
         <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logoX"> <img class="logoInsta"
