--- a/form.html
+++ b/form.html
@@ -147,12 +147,13 @@
         </div>
     </section>
 
+    <div class="footercapsule"></div>
     <!-- <footer>
-        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logo GymStudio"> </p>
-        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logo X"> <img
-                class="logoInsta" src="images/logoInsta.png" alt="logo Instagram"></p>
-    </footer> -->
 
+        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logogymstudio"> </p>
+        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logoX"> <img class="logoInsta"
+                src="images/logoInsta.png" alt="logoinsta"></p>
+    </footer> -->
     <footer>
         <div id="footerLeft">
             <p>&copy;</p>
@@ -164,6 +165,24 @@
             <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
         </div>
     </footer> 
+
+    <!-- <footer>
+        <p>&copy; <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logo GymStudio"> </p>
+        <p>Retrouvez-nous sur les réseaux sociaux : <img class="logoX" src="images/logoX.png" alt="logo X"> <img
+                class="logoInsta" src="images/logoInsta.png" alt="logo Instagram"></p>
+    </footer> -->
+
+    <!-- <footer>
+        <div id="footerLeft">
+            <p>&copy;</p>
+            <img class="logoGymStudioFooter" src="images/logoGymStudio.png" alt="logoGymStudio">
+        </div>
+        <div id="footerRight">
+            <p>Retrouvez-nous sur les réseaux sociaux : </p>
+            <img class="logoX" src="images/logoX.png" alt="logoX"> 
+            <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
+        </div>
+    </footer>  -->
 
     <script src="form.js"></script>
     <script src="menuBurger.js" defer> </script>
