--- a/form.html
+++ b/form.html
@@ -65,19 +65,19 @@
                         <label for="coachName">Le Coach</label>
                         <select name="selectCoachName" id="selectCoachName">
                             <option value="noCoachSelected" class="maskCoach"></option>
-                            <option value="coachBoxe1" class="maskCoach">Bob - Boxe</option>
-                            <option value="coachBoxe2" class="maskCoach">Laura - Boxe</option>
-                            <option value="coachMuscu1" class="maskCoach">Anaïs - Musculation
+                            <option value="coachBoxe1" class="sportBoxe">Bob - Boxe</option>
+                            <option value="coachBoxe2" class="sportBoxe">Laura - Boxe</option>
+                            <option value="coachMuscu1" class="maskCoach sportMuscu">Anaïs - Musculation
                             </option>
-                            <option value="coachMuscu2" class="maskCoach">Thomas - Musculation
+                            <option value="coachMuscu2" class="maskCoach sportMuscu">Thomas - Musculation
                             </option>
-                            <option value="coachAquaBike" class="maskCoach">Léa - AquaBike
+                            <option value="coachAquaBike" class="maskCoach sportAquaBike">Léa - AquaBike
                             </option>
-                            <option value="coachCardio1" class="maskCoach">Arthur - Cardio
+                            <option value="coachCardio1" class="maskCoach sportCardio">Arthur - Cardio
                             </option>
-                            <option value="coachCardio2" class="maskCoach">Luc - Cardio</option>
-                            <option value="coachAquaGym" class="maskCoach">Inès - AquaGym</option>
-                            <option value="coachYoga" class="maskCoach">Clémence - Yoga</option>
+                            <option value="coachCardio2" class="maskCoach sportCardio">Luc - Cardio</option>
+                            <option value="coachAquaGym" class="maskCoach sportAquaGym">Inès - AquaGym</option>
+                            <option value="coachYoga" class="maskCoach sportYoga">Clémence - Yoga</option>
                         </select>
                     </div>
                     <div id="nameClient">
