--- a/homePage.html
+++ b/homePage.html
@@ -113,7 +113,7 @@
       <img class="logoX" src="images/logoX.png" alt="logoX">
       <img class="logoInsta" src="images/logoInsta.png" alt="logoInsta">
     </div>
-</footer>  -->
+  </footer>
 
 
 </body>
