--- a/coach.html
+++ b/coach.html
@@ -53,7 +53,7 @@
             <div id="picaquabike2"><a><img src="images/picAquabike.png" alt="picaquabike" data-section="aquabike"
                         id="picaquabike"></a>
             </div>
-            <div id="picaquagym2"><a><img src="images/picAquagym.png" alt="picaquagym" data-section="aquagym"
+            <div id="picaquagym2"><a><img src="images/picAquaGym.png" alt="picaquagym" data-section="aquagym"
                         id="picaquagym"></a>
             </div>
         </div>
