--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section id="logo">
 
     <div>
-      <a href="homePage.html">
+      <a href="index.html">
         <img src="images/logoGymStudio.png" alt="logo" class="logo">
       </a>
 
@@ -45,7 +45,7 @@
   <div id="mySidenav" class="sidenav">
     <a id="closeBtn" href="#" class="close">×</a>
     <ul>
-      <li><a href="homePage.html">Nos salles</a></li>
+      <li><a href="index.html">Nos salles</a></li>
       <li><a href="activities2.html">Nos sports</a></li>
       <li><a href="coach.html">Nos coach</a></li>
       <li><a href="form.html">Réserver</a></li>
