--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
         <div id="mySidenav" class="sidenav">
             <a id="closeBtn" href="#" class="close">×</a>
             <ul>
-                <li><a href="homePage.html">Nos salles</a></li>
+                <li><a href="index.html">Nos salles</a></li>
                 <li><a href="activities2.html">Nos sports</a></li>
                 <li><a href="coach.html">Nos coach</a></li>
                 <li><a href="form.html">Réserver</a></li>
@@ -36,7 +36,7 @@
             </span>
         </a>
         <div>
-            <a href="homePage.html">
+            <a href="index.html">
                 <img class="logoGymStudio" src="images/logoGymStudio.png" alt="logo GymStudio">
             </a>
         </div>
