--- a/activities2.html
+++ b/activities2.html
@@ -87,7 +87,7 @@
         <div id="aquagymPicto" data-section="aquagym">
             <div class="icon_buttons" id="icon_sports_aquagym">
                 <a href="#">
-                    <img src="images/picAquagym.png" alt="icone_aquagym" id="L'AQUAGYM" class="choiceSport">
+                    <img src="images/picAquaGym.png" alt="icone_aquagym" id="L'AQUAGYM" class="choiceSport">
                 </a>
             </div>
             <div class="txt_buttons" id="sports_aquagym">
