--- a/coach.html
+++ b/coach.html
@@ -50,7 +50,7 @@
                         id="picmuscu"></a></div>
             <div id="picyoga2"><a><img src="images/picYoga.png" alt="picyoga" id="picyoga" data-section="yoga"></a>
             </div>
-            <div id="picaquabike2"><a><img src="images/picAquabike.png" alt="picaquabike" data-section="aquabike"
+            <div id="picaquabike2"><a><img src="images/picAquaBike.png" alt="picaquabike" data-section="aquabike"
                         id="picaquabike"></a>
             </div>
             <div id="picaquagym2"><a><img src="images/picAquaGym.png" alt="picaquagym" data-section="aquagym"
